--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,6 +29,7 @@
                 <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
                 <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %>
                 <%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+                <%= button_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, form: { data: { turbo_confirm: 'Are you sure?' }} %>
               </div>
             </li>
             <li class="nav-item">
